2003-07-16  Peter Williams  <peter@newton.cx>

	* TcpListenerTest.cs: Initialize outSock to null to
	prevent an mcs compile error.

2003-07-14  Jerome Laban <jlaban@wanadoo.fr>

	* TcpListenerTest.cs: Forced IPv4 listener test.

2002-11-03  Phillip Pearson  <pp@myelin.co.nz>

	* AllTests.cs: Fixed Lawrence's e-mail address.

2002-05-17  Lawrence Pit <loz@cable.a2000.nl>

	* AllTests.cs: added


