@@ -1,3 +1,7 @@
+2003-08-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* TcpListenerTest.cs: added more tests.
+
 2003-07-16  Peter Williams  <peter@newton.cx>
 
 	* TcpListenerTest.cs: Initialize outSock to null to
